New project image add

--- a/index.html
+++ b/index.html
@@ -88,13 +88,13 @@
           </div>
           </div>
           <div class="px-4 pt-5 my-5 text-center border-bottom">
-            <h3 class="display-4 fw-bold text-body-emphasis project-name">Move It</h3>
+            <h3 class="display-4 fw-bold text-body-emphasis project-name">Simon Game</h3>
               <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
                 <button type="button" id="secondProject" class="btn btn-dark btn-lg px-4 me-sm-3 project-button">View Project</button>
             </div>
             <div class="overflow-hidden" style="max-height: 30vh;">
               <div class="container px-5">
-                <img src="./images/MoveIt.png" class="img-fluid border rounded-3 shadow-lg mb-4" alt="Example image" width="700" height="600" loading="lazy">
+                <img src="./images/simon-game.png" class="img-fluid border rounded-3 shadow-lg mb-4" alt="Example image" width="400" height="800" loading="lazy">
               </div>
             </div>
           </div>
